--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: YW50b25pbwo=
-  POSTGRES_PASSWORD: QXczczBtZXlvdQo=
+  POSTGRESS_USERNAME: YW50b25pbw==
+  POSTGRESS_PASSWORD: QXczczBtZXlvdQ==
