--- a/udagram-api-user/backend-user-deployment.yaml
+++ b/udagram-api-user/backend-user-deployment.yaml
@@ -23,7 +23,7 @@ spec:
               memory: "200Mi"
               cpu: "250m"
             limits:
-              memory: "1024Mi"
+              memory: "2048Mi"
               cpu: "500m"
           env:
             - name: URL
@@ -51,26 +51,26 @@ spec:
                 configMapKeyRef:
                   name: env-config
                   key: JWT_SECRET
-            - name: POSTGRES_DB
+            - name: POSTGRESS_DB
               valueFrom:
                 configMapKeyRef:
                   name: env-config
-                  key: POSTGRES_DB
-            - name: POSTGRES_HOST
+                  key: POSTGRESS_DB
+            - name: POSTGRESS_HOST
               valueFrom:
                 configMapKeyRef:
                   name: env-config
-                  key: POSTGRES_HOST
-            - name: POSTGRES_PASSWORD
+                  key: POSTGRESS_HOST
+            - name: POSTGRESS_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: env-secret
-                  key: POSTGRES_PASSWORD
-            - name: POSTGRES_USERNAME
+                  key: POSTGRESS_PASSWORD
+            - name: POSTGRESS_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: env-secret
-                  key: POSTGRES_USERNAME
+                  key: POSTGRESS_USERNAME
           volumeMounts:
             - name: aws-secret
               mountPath: "/root/.aws/"
